--- a/package.json
+++ b/package.json
@@ -1,13 +1,12 @@
 {
   "name": "pass-generator",
   "version": "0.1.0",
-  "homepage": "https://1talhapk.github.io/strongPasswordGenerator",
+  "homepage": "/strongPasswordGenerator/#",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "gh-pages": "^5.0.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -41,5 +40,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^5.0.0"
   }
 }
